Archivos yaml/pcano-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pcano-svc
  labels:
    app: app-pcano-dev
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30001
    protocol: TCP
  selector:
    app: app-pcano-dev
