Archivos yaml/pcano-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pcano
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.pcano.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pcano-svc
            port:
              number: 80
